--- a/preentrega_3.1/Dockerfile
+++ b/preentrega_3.1/Dockerfile
@@ -1,17 +1,16 @@
 FROM python:3.11
 
-WORKDIR /app
+WORKDIR ./app
 
 RUN pip install apache-airflow[providers-postgres]
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-WORKDIR /opt/airflow/dags
 
-COPY dag_pedro_toledo.py .
-COPY config.env .
-
+WORKDIR ./dags
+COPY dag_pedro_toledo.py ./dags
+COPY config.env ./dags
 
 
 EXPOSE 8080
