cambios en apikey

--- a/04_entrega_final/config.env
+++ b/04_entrega_final/config.env
@@ -4,4 +4,4 @@ HOST = 'data-engineer-cluster.cyhh5bfevlmn.us-east-1.redshift.amazonaws.com'
 PORT = '5439'
 DATABASE = 'data-engineer-database'
 SCHEMA = 'ptoledor_coderhouse'
-SENDGRID_API_KEY = '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'
+SENDGRID_API_KEY = 
